# Simplify-Docx

./: AGENTS.md  README.md  pyproject.toml
src/simplify_docx/: __init__.py
src/simplify_docx/elements/: __init__.py  base.py  body.py  document.py  form.py  paragraph.py  run_contents.py  table.py
src/simplify_docx/iterators/: __init__.py  body.py  document.py  generic.py  paragraph.py  run.py  table.py
src/simplify_docx/types/: __init__.py  fragment.py
src/simplify_docx/utils/: __init__.py  friendly_names.py  paragrapy_style.py  set_options.py  tag.py  walk.py  warnings.py
tests/: conftest.py  test_iterators.py  test_lxml_compat.py  test_paragraph_merge.py  test_run_contents.py  test_set_options.py  test_simplify.py  test_tag_utils.py  test_utils.py
